<resources>
    <string name="app_name">Travel Log</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Travel Log App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_maps">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_journal_entry">New Journal Entry</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_location">Set Location</string>
    <string name="tbdLocation">Location</string>
    <string name="add_picture">Add Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>


    <string name="visit_title">visit_title</string>
    <string name="searchByName">Search By Name</string>
    <string name="add">Add new Entry</string>
    <string name="addVisit">New Visit</string>
    <string name="search">Search</string>
    <string name="asc">Sort asc</string>
    <string name="desc">Sort Desc</string>
    <string name="addBLentry">New Entry</string>
    <string name="journal_entry">Journal Entry</string>
    <string name="show_location">Show Location</string>
    <string name="cancel">Cancel</string>
    <string name="bio">Bio</string>
    <string name="hometown">HomeTown</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="enter_bio">Enter bio…</string>
    <string name="enter_name">Enter Name</string>
    <string name="journal_entry_image">Journal Entry Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close_journal">close_journal</string>
    <string name="placeholder_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi bibendum neque egestas congue quisque. Vitae justo eget magna fermentum iaculis. Scelerisque purus semper eget duis at tellus. Ut consequat semper viverra nam libero. Vulputate dignissim suspendisse in est ante. Fringilla phasellus faucibus scelerisque eleifend. Libero enim sed faucibus turpis in eu. Sodales ut eu sem integer vitae. Fermentum iaculis eu non diam phasellus vestibulum lorem sed. Lectus magna fringilla urna porttitor rhoncus dolor.</string>
    <string name="default_datetime">01/01/1970 12:00am</string>
    <string name="default_location">Michigan, United States of America</string>
    <string name="placeholder_title">Placeholder Title</string>
    <string name="journal_list">Journal List</string>
    <string name="bucket_list">Bucket List</string>
    <string name="sign_out">Sign Out</string>
    <string name="mainactivity">MainActivity</string>
    <string name="profile">Profile</string>
    <string name="app_version_number">v1.1</string>
    <string name="title_edit_profile">title_edit_profile</string>
    <string name="fragment_profile">fragment_profile</string>
    <string name="default_date">01/01/1970</string>
    <string name="new_bucket_list_item">New Bucket List Item</string>
    <string name="your_profile_picture">Your Profile Picture</string>
    <string name="placeholder_username">PlaceHolder Username</string>
    <string name="placeholder_hometown">Placeholder HomeTown</string>
    <string name="placeholder_bio">This is the bio for the user profile. This string is the full character limit for the user biography.</string>
</resources>