<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/baseline_home_24"
            />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/profilepic"
            />
        <item
            android:id="@+id/nav_journal_list"
            android:title="@string/journal_list"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            />
        <item
            android:id="@+id/nav_bucket_list"
            android:title="@string/bucket_list"
            android:icon="@drawable/baseline_checklist_rtl_24"
            />
        <item
            android:id="@+id/nav_maps"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_maps" />
    </group>
</menu>