<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/journalListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.journalList.JournalListFragment">

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/searchByName"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/addVisit"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/search"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/ascButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/asc"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/descButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/desc"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/visit_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>