<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:background="@drawable/rounded_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/your_profile_picture"
            tools:ignore="ImageContrastCheck"
            android:src="@drawable/profilepic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_username"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/userHometown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_hometown"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/userBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/placeholder_bio"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="12sp"/>
        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_profile" />

<!--    <include layout="@layout/fragment_journal_list"/>-->

<!-- not exactly sure what this was for? -->
<!--    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck" />-->

</LinearLayout>