<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.travelbetadisaster.travel_log.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <!-- Actions to other fragments from Home -->
        <action
            android:id="@+id/action_nav_home_to_nav_maps"
            app:destination="@id/nav_maps" />
        <action
            android:id="@+id/action_nav_home_to_journalListFragment"
            app:destination="@id/nav_journal_list" />
        <action
            android:id="@+id/action_nav_home_to_profileFragment"
            app:destination="@id/nav_profile" />
    </fragment>





    <fragment
        android:id="@+id/nav_maps"
        android:name="com.travelbetadisaster.travel_log.ui.maps.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_journal_list"
        android:name="com.travelbetadisaster.travel_log.ui.journalList.JournalListFragment"
        android:label="fragment_journal_list"
        tools:layout="@layout/fragment_journal_list" />
    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.travelbetadisaster.travel_log.ui.profile.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile">
        <!-- Action to navigate to EditProfileFragment -->
        <action
            android:id="@+id/action_nav_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_bucket_list"
        android:name="com.travelbetadisaster.travel_log.ui.bucketList.BucketListFragment"
        android:label="fragment_bucket_list"
        tools:layout="@layout/fragment_bucket_list" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.travelbetadisaster.travel_log.ui.profile.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <action android:id="@+id/action_global_nav_home"
        app:destination="@id/nav_home" />
</navigation>
