<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/journal_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="?attr/colorSecondaryVariant"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/journalImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/journal_entry_image"
            android:src="@drawable/placeholder_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/journalImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:backgroundTint="?attr/colorSecondary"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/journalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder_title"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/journalEntryDate"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:textSize="10sp"
                    android:textColor="@color/design_default_color_on_primary"
                    android:text="@string/default_date"/>
            </LinearLayout>

            <TextView
                android:id="@+id/journalLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_location"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/journalDescription"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/design_default_color_on_primary"
                android:text="@string/placeholder_description" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>