<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.journalEntry.EditJournalEntryFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--  edit this line to have code that fills text with "New" vs "Edit"  -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_journal_entry"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        style="@style/TextAppearance.AppCompat.Title"/>

    <!--title block-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/journalTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--  Date Time Block  -->

<!-- just make time auto set to current time to save us time-->
<!--    <LinearLayout-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_marginVertical="5dp"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:baselineAligned="false">-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1">-->

<!--            <EditText-->
<!--                android:id="@+id/journalEntryDate"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/date"-->
<!--                android:inputType="date"-->
<!--                android:importantForAutofill="no" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginStart="10dp">-->
<!--            <EditText-->
<!--                android:id="@+id/journalEntryTime"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/time"-->
<!--                android:inputType="time"-->
<!--                android:importantForAutofill="no" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--    </LinearLayout>-->

    <LinearLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="20dp">
<!--TODO this button will prbably not do anything based on how much time we have left
    TODO in theory if we kept developing features it would let the user choose a location on the map-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:id="@+id/btnSetLocation"
            android:contentDescription="@string/set_location"
            android:backgroundTint="@color/design_default_color_primary"
            android:src="@drawable/baseline_pin_drop_24"
            app:tint="@color/design_default_color_on_primary">
        </ImageButton>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="9">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:id="@+id/journalEntryLocation"
                android:hint="@string/location"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/journalDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">

        <ImageButton
            android:id="@+id/btnAddPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/design_default_color_primary"
            android:contentDescription="@string/add_picture"
            android:src="@drawable/ic_menu_camera"
            app:tint="@color/design_default_color_on_primary">

        </ImageButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>