<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.journalEntry.JournalEntryFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/journal_entry"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        style="@style/TextAppearance.AppCompat.Title"/>

<!--title block-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/journalTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:textColorHint="#616161"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

<!--  Date Time Block  -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/journalEntryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/date"
                    android:inputType="date"
                    android:textColorHint="#616161"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp">

                <EditText
                    android:id="@+id/journalEntryTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="time"
                    android:textColorHint="#616161"
                    android:autofillHints=""
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp">

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:id="@+id/setLocation"-->
<!--                android:contentDescription="@string/set_location"-->
<!--                app:icon="@drawable/baseline_pin_drop_24"-->
<!--                app:iconPadding="0dp"-->
<!--                app:iconGravity="textEnd">-->

<!--            </com.google.android.material.button.MaterialButton>-->

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/showLocation"
                android:contentDescription="@string/show_location"
                android:backgroundTint="@color/design_default_color_primary"
                android:src="@drawable/baseline_my_location_24"
                app:tint="@color/design_default_color_on_primary">
            </ImageButton>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/journalEntryLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/location"
                    android:textColorHint="#616161"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/journalDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#616161"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:layout_marginVertical="10dp">-->

<!--        <ImageButton-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="2"-->
<!--            android:backgroundTint="@color/design_default_color_primary"-->
<!--            android:contentDescription="@string/add_picture"-->
<!--            android:src="@drawable/ic_menu_camera"-->
<!--            app:tint="@color/design_default_color_on_primary">-->

<!--        </ImageButton>-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnSave"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:text="@string/save"/>-->

<!--    </LinearLayout>-->

</LinearLayout>